--- a/apps/web-root/m/index.html
+++ b/apps/web-root/m/index.html
@@ -2834,20 +2834,14 @@
 	    <div><strong>Effective Date:</strong> January 30, 2026</div>
 	    <div><strong>App Name:</strong> Shirt Tracker</div>
 
-	    <div style="height: 14px;"></div>
-
 	    <div><strong>1. Introduction</strong></div>
 	    <p>At <strong>Shirt Tracker</strong>, accessible via this application, one of our main priorities is the privacy of our users. This Privacy Policy document describes the types of information that is collected and recorded by Shirt Tracker and how we use it.</p>
 	    <p>By using our application, you hereby consent to this Privacy Policy and agree to its terms.</p>
-
-	    <div style="height: 14px;"></div>
 
 	    <div><strong>2. Data Controller</strong></div>
 	    <p>For the purposes of the General Data Protection Regulation (GDPR) and other applicable data protection laws, the <strong>Data Controller</strong> responsible for your personal information is:</p>
 	    <div><strong>Aaron Dunn</strong> (Creator &amp; Developer)</div>
 	    <div><strong>Contact:</strong> Please use the contact form linked at the bottom of this policy.</div>
-
-	    <div style="height: 14px;"></div>
 
 	    <div><strong>3. Information We Collect</strong></div>
 	    <p>We only collect information necessary to provide the functionality of the app. This includes:</p>
@@ -2858,16 +2852,12 @@
 	    </ul>
 	    <div><strong>We do NOT sell, trade, or rent your personal identification information to others.</strong></div>
 
-	    <div style="height: 14px;"></div>
-
 	    <div><strong>4. Legal Basis for Processing</strong></div>
 	    <p>We process your personal data under the following legal bases:</p>
 	    <ul>
 	      <li><strong>Contractual Necessity:</strong> We need your email and shirt data to provide the service you signed up for (i.e., saving your list). The app cannot function without this.</li>
 	      <li><strong>Legitimate Interests:</strong> We log basic technical data (IP addresses) to ensure the security and stability of the app.</li>
 	    </ul>
-
-	    <div style="height: 14px;"></div>
 
 	    <div><strong>5. How We Use Your Information</strong></div>
 	    <p>We use the information we collect in the following ways:</p>
@@ -2878,8 +2868,6 @@
 	      <li>To communicate with you regarding updates or support (only if you have contacted us first).</li>
 	    </ul>
 
-	    <div style="height: 14px;"></div>
-
 	    <div><strong>6. Third-Party Services &amp; Infrastructure</strong></div>
 	    <p>To run this application securely and reliably, we utilize trusted third-party service providers. By using the app, you acknowledge that your data may pass through or be stored on servers managed by these providers:</p>
 	    <ul>
@@ -2889,12 +2877,8 @@
 	    </ul>
 	    <p>These parties have access to necessary data only to perform these tasks on our behalf and are obligated not to disclose or use it for any other purpose.</p>
 
-	    <div style="height: 14px;"></div>
-
 	    <div><strong>7. Data Retention</strong></div>
 	    <p>We retain your personal information only for as long as is necessary to provide you with the Shirt Tracker service. If you delete your account, your personal data and shirt lists are permanently removed from our active database.</p>
-
-	    <div style="height: 14px;"></div>
 
 	    <div><strong>8. User Rights (GDPR &amp; CCPA)</strong></div>
 	    <p>We respect your control over your data. Regardless of where you live, we extend these rights to all users:</p>
@@ -2905,20 +2889,20 @@
 	    </ul>
 	    <p>To exercise these rights, please contact the Data Controller using the link below.</p>
 
-	    <div style="height: 14px;"></div>
-
 	    <div><strong>9. Children's Privacy</strong></div>
-	    <p>Shirt Tracker does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, please contact us.</p>
-		
-		<div><strong>10. Contact Us</strong></div>
-		<p>If you have any questions about our Privacy Policy or wish to exercise your data rights, please contact the developer.</p>
-		
-        <div><a href="#" id="privacy-contact-link">Contact Us</a></div>
-      </div>
-      <div class="dialog-actions">
-        <button type="button" class="btn" id="privacy-policy-close">Close</button>
-      </div>
-    </dialog>
+	    <p>Shirt Tracker does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, please contact us immediately.</p>
+
+	    <div><strong>10. Contact Us</strong></div>
+	    <p>If you have any questions about our Privacy Policy or wish to exercise your data rights, please contact the developer.</p>
+
+	    <div><a href="#" id="privacy-contact-link">Contact Us</a></div>
+	  </div>
+  
+	  <div class="dialog-actions">
+	    <button type="button" class="btn" id="privacy-policy-close">Close</button>
+	  </div>
+	</dialog>
+	
     <dialog id="contact-dialog" class="contact-dialog">
       <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" class="contact-form">
         <input type="hidden" name="form-name" value="contact">
