--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -2456,6 +2456,7 @@
             <div class="signedout-help">Please login to continue. You may also <a href="#register" id="register-link">register here</a>.</div>
             <div class="signedout-help"><a href="#forgot" id="forgot-password-link">Forgot password?</a></div>
           </div>
+          <div class="auth-loading" id="auth-loading" style="display:none;">Loading...</div>
             <div class="header-actions">
               <div class="danger-zone">
                 <div id="mobile-action-table-wrap" style="width: 100%; display: flex; justify-content: center;">
@@ -4246,6 +4247,26 @@
           syncToSupabase();
         }
         closeDialog(shareColumnsDialog);
+      };
+
+      const setAuthLoading = (isLoading) => {
+        if (!document.body) return;
+        if (isLoading) {
+          document.body.setAttribute("data-auth", "loading");
+        } else if (document.body.getAttribute("data-auth") === "loading") {
+          document.body.setAttribute("data-auth", "signed-out");
+        }
+        const signedOutLogin = document.querySelector(".signedout-login");
+        if (signedOutLogin) {
+          signedOutLogin.style.display = isLoading ? "none" : "";
+        }
+        const authLoading = document.getElementById("auth-loading");
+        if (authLoading) {
+          authLoading.style.display = isLoading ? "block" : "none";
+        }
+        if (authActionSignedOutButton) {
+          authActionSignedOutButton.style.display = isLoading ? "none" : "";
+        }
       };
 
       const setAuthStatus = () => {
@@ -6781,6 +6802,7 @@
           applyPublicShareMode();
           loadPublicShareState(publicShareToken);
         }
+        setAuthLoading(true);
         supabase.auth.getSession()
           .then(({ data }) => {
             if (publicShareToken) {
@@ -6794,6 +6816,7 @@
             isViewerSession = false;
             document.body.setAttribute("data-viewer", currentUser ? "pending" : "false");
             setAuthStatus();
+            setAuthLoading(false);
             updateBackupStatusFromStorage();
             updateAppUpdateDate();
             updateLastActivity();
@@ -6806,11 +6829,13 @@
             isViewerSession = false;
             document.body.setAttribute("data-viewer", "false");
             setAuthStatus();
+            setAuthLoading(false);
             updateBackupStatusFromStorage();
             updateAppUpdateDate();
             updateFooterVersionLine();
           });
         supabase.auth.onAuthStateChange((_event, session) => {
+          setAuthLoading(true);
           if (publicShareToken) {
             updateAppUpdateDate();
             updateFooterVersionLine();
@@ -6822,6 +6847,7 @@
           isViewerSession = false;
           document.body.setAttribute("data-viewer", currentUser ? "pending" : "false");
           setAuthStatus();
+          setAuthLoading(false);
           updateLastActivity();
           handleInactivityCheck();
           if (currentUser) {
@@ -6831,6 +6857,7 @@
       } else {
         document.body.setAttribute("data-viewer", "false");
         setAuthStatus();
+        setAuthLoading(false);
         updateBackupStatusFromStorage();
         updateAppUpdateDate();
         updateFooterVersionLine();
