--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -2643,7 +2643,7 @@
           <div class="footer-actions" id="footer-actions">
             <button class="btn" id="go-top">Go to Top</button>
             <button class="btn" id="add-row-bottom">Add Row</button>
-            <div style="display:flex; gap:8px; align-items:center; width:100%;">
+            <div style="display:flex; gap:8px; align-items:center; width:100%; justify-content:center;">
               <button class="btn secondary compact" id="delete-selected-bottom" style="width:auto;">Delete Item(s)</button>
               <button class="btn secondary compact" id="bulk-tags" style="width:auto;">Tag Item(s)</button>
             </div>
