--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -4646,6 +4646,12 @@
         if (shareColumnsButton) {
           shareColumnsButton.style.display = "none";
         }
+        if (copyShareLinkButton) {
+          copyShareLinkButton.style.display = "none";
+        }
+        if (bulkTagsButton) {
+          bulkTagsButton.style.display = "none";
+        }
         if (syncNowButton) syncNowButton.disabled = true;
         if (verifyBackupButton) verifyBackupButton.disabled = true;
         updateUnsavedStatus();
