--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -5887,16 +5887,38 @@
         const addBtn = document.createElement("button");
         addBtn.type = "button";
         addBtn.className = "tab-btn add";
-        addBtn.textContent = "+";
+        addBtn.textContent = "+ Add Tab";
         addBtn.setAttribute("aria-label", "Add tab");
         addBtn.addEventListener("click", () => {
           openTabDialog();
         });
         controls.appendChild(addBtn);
+        const renameBtn = document.createElement("button");
+        renameBtn.type = "button";
+        renameBtn.className = "tab-btn rename";
+        renameBtn.textContent = "✏️ Edit Tab";
+        renameBtn.setAttribute("aria-label", "Rename current tab");
+        renameBtn.addEventListener("click", () => {
+          if (!tabsState.activeTabId) return;
+          const activeTab = tabsState.tabs.find((tab) => tab.id === tabsState.activeTabId);
+          if (!activeTab) return;
+          const nextName = prompt("Rename tab:", activeTab.name || "");
+          if (!nextName) return;
+          const trimmed = nextName.trim();
+          if (!trimmed) return;
+          if (trimmed === activeTab.name) return;
+          activeTab.name = trimmed;
+          saveTabsState();
+          saveState();
+          renderTabs();
+        renderTable();
+        renderFooter();
+      });
+        controls.appendChild(renameBtn);
         const deleteBtn = document.createElement("button");
         deleteBtn.type = "button";
         deleteBtn.className = "tab-btn delete";
-        deleteBtn.textContent = "🗑️";
+        deleteBtn.textContent = "🗑️ Delete Tab";
         deleteBtn.setAttribute("aria-label", "Delete current tab");
         deleteBtn.addEventListener("click", () => {
           if (!tabsState.activeTabId) return;
