Fix request access form capture
Delayed clearing the Request Access form fields so Netlify captures submitted name and email before the form resets, while keeping the thank-you dialog flow intact on desktop and mobile.

--- a/apps/web-desktop/src/index.html
+++ b/apps/web-desktop/src/index.html
@@ -7841,7 +7841,9 @@
       }
       if (requestAccessForm) {
         requestAccessForm.addEventListener("submit", () => {
-          requestAccessForm.reset();
+          setTimeout(() => {
+            requestAccessForm.reset();
+          }, 300);
           if (requestAccessDialog) closeDialog(requestAccessDialog);
           if (requestAccessThanks) openDialog(requestAccessThanks);
         });
