--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -8006,7 +8006,9 @@
       }
       if (requestAccessForm) {
         requestAccessForm.addEventListener("submit", () => {
-          requestAccessForm.reset();
+          setTimeout(() => {
+            requestAccessForm.reset();
+          }, 300);
           if (requestAccessDialog) closeDialog(requestAccessDialog);
           if (requestAccessThanks) openDialog(requestAccessThanks);
         });
